--- a/src/pages/ServicePage.css
+++ b/src/pages/ServicePage.css
@@ -103,10 +103,11 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 150%;
-  height: 150%;
+  width: 90%;
+  height: 90%;
   background-image: var(--flag-url);
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
   background-position: center;
   opacity: 0.1;
   z-index: -1;
